# one-click

./: .pre-commit-config.yaml  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  README.md  docker-compose.yaml  mkdocs.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-release.yml  docs.yml  link-check.yml  mkdocs.yaml  operator-ci.yml  pr-labels.yml  ui-ci.yml
deployment/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  ns.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: glossary.md  index.md
docs/blueprints/: nginx.yaml  node-red.yaml  pocketbase.yaml
docs/decisions/: 0000-template.md  0001-record-architecture-decision.md  0002-mkdocs-for-documentation.md  0003-tech-stack.md  0004-supported-technologies.md  0005-use-of-generative-ai.md  0006-applications-exclusion.md  0007-kubernetes-operator.md  0008-project-management.md  0009-demo-app-streamlit copy.md  0010-no-mockups.md  index.md
docs/docs/: architecture.md  backend.md  frontend.md  (+2 more)
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
operator/: .gitignore  Makefile  PROJECT  README.md  application.yaml  bundle.Dockerfile  go.mod  main.go  node-red.yaml  test.yaml
pocketbase/: .env  README.md  example-hook-script.sh  filters.md  go.mod  go.sum  main.go  nginx-template.yaml  test.json
scripts/: frontend-check.sh
testing/streamlit-tests/: pyproject.toml
ui/: .dockerignore  Dockerfile  README.md
(+467 files in other folders)
