[tool.poetry]
name = "streamlit-tests"
version = "0.1.0"
description = ""
authors = ["Jan Lauber <jan.lauber@protonmail.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
